<resources>
    <string name="app_name">Alertify</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="switch_datetime_picker_name">Switch DateTime Picker</string>
    <string name="open_datetime_dialog">Open DateTime Dialog</string>
    <string name="open_datetime_dialog_with_neutral_button">Open DateTime Dialog with Neutral Button</string>
    <string name="clean">Clean</string>
    <string name="label_datetime_dialog">DateTime</string>
    <string name="alertify_heading">ALERTIFY</string>
    <string name="select_item">Select Police Station</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="signup">Sign-up</string>
    <string name="password_hint">enter atleast 6 words</string>
    <string name="user_name_hint">enter user name</string>
    <string name="ok">Ok</string>
    <string name="maps_api_key">AIzaSyCoDtci5S11xJfMTs4zIJvBoytoIKnfn_Y</string>
    <string name="search">Search...</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="name_hint">enter your name</string>
    <string name="mobile_hint">enter your mobile no</string>
    <string name="cnic_hint">enter your cnic no</string>
    <string name="crime_location_hint">Crime Location</string>
    <string name="crime_evidence_hint">Crime Evidence (Optional)</string>
    <string name="report_crime">Report Crime</string>
    <string name="crime_type_hint">Crime Type</string>
    <string name="your_location_hint">Select Your Location</string>
    <string name="crime_details_hint">Crime Details</string>
    <string name="crime_date_hint">Crime Date</string>
    <string name="crime_time_hint">Crime Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="download">Download</string>
    <string name="direction">Directions</string>
    <string name="emergency_help_text">Emergency help needed?</string>
    <string name="emergency_help_text_hint">Just press the button for emergency services</string>
    <string name="complaints">Complaints</string>
    <string name="police_station">Police Station</string>
    <string name="police_station_fir">Police Station :</string>
    <string name="records">Records</string>
    <string name="emergency">Emergency</string>
    <string name="name">Name</string>
    <string name="cnic">CNIC</string>
    <string name="fir">FIR</string>
    <string name="no_of_fir">No of FIR :</string>
    <string name="district">District :</string>
    <string name="user_sign_up">User Sign-up</string>
    <string name="please_enter_your_details">Please enter your details.</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Phone No</string>
    <string name="cnic_no">CNIC No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loading_email">loading email....</string>
    <string name="alertify">ALERTIFY</string>
    <string name="feedback">Feedback</string>
    <string name="evidence">Evidence</string>
    <string name="crime_type">Crime Type</string>
    <string name="crime_details">Crime Details</string>
    <string name="crime_location">Crime Location</string>
    <string name="complaint_police_station">Complaint Police Station</string>
    <string name="complaint_datetime">Complaint DateTime</string>
    <string name="crime_datetime">Crime DateTime</string>
    <string name="investigation_status">Investigation Status</string>
    <string name="crime">Crime</string>
    <string name="section">Section:</string>
</resources>