<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_shape">

        <ImageView
            android:id="@+id/closeBtn"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/close" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/crime_type_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/closeBtn"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/crime_type_hint"
            android:textColorHint="@color/hint_color"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/hint_color"
            app:endIconTint="@color/hint_color"
            app:hintTextColor="@color/hint_color">

            <AutoCompleteTextView
                android:id="@+id/crimeType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/hint_color" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/crime_details_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/crime_type_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/crime_details_hint"
            android:textColorHint="@color/hint_color"
            app:boxStrokeColor="@color/hint_color"
            app:hintTextColor="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/crimeDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/hint_color"
                android:textCursorDrawable="@drawable/cursor_shape" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/crimeDateTimeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/crime_details_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/crime_date_hint"
            android:textColorHint="@color/hint_color"
            app:boxStrokeColor="@color/hint_color"
            app:endIconDrawable="@drawable/date_icon"
            app:endIconMode="custom"
            app:hintTextColor="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/crimeDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/hint_color"
                android:textCursorDrawable="@drawable/cursor_shape" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/crimeLocationLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/crimeDateTimeLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/crime_location_hint"
            android:textColorHint="@color/hint_color"
            app:boxStrokeColor="@color/hint_color"
            app:endIconDrawable="@drawable/location"
            app:endIconMode="custom"
            app:hintTextColor="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/crimeLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/hint_color" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/crimeEvidenceLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/crimeLocationLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/crime_evidence_hint"
            android:textColorHint="@color/hint_color"
            app:boxStrokeColor="@color/hint_color"
            app:endIconDrawable="@drawable/attach_file"
            app:endIconMode="custom"
            app:hintTextColor="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/crimeEvidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/hint_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reportCrimeBtn"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/crimeEvidenceLayout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/app_color"
            android:text="@string/report_crime"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="10dp" />

    </RelativeLayout>
</ScrollView>