<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:elevation="4dp"
   android:backgroundTint="@color/white"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/firNumberHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/no_of_fir"
            android:textColor="@color/black"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/firNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/firNumberHeading"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="3"
            android:textColor="@color/hint_color"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/districtHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/firNumberHeading"
            android:layout_marginEnd="5dp"
            android:text="@string/district"
            android:textColor="@color/black"
            android:textSize="12sp"
          />

        <TextView
            android:id="@+id/district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/districtHeading"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/firNumberHeading"
            android:text="331008373653"
            android:textColor="@color/hint_color"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/policeStationHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/districtHeading"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/police_station_fir"
            android:textColor="@color/black"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/policeStation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_below="@id/districtHeading"
            android:layout_toEndOf="@+id/policeStationHeading"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="Police Station Samanabad Faisalabad"
            android:textColor="@color/hint_color"
            android:textSize="11sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>