<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3490DC"
        tools:ignore="ScrollViewSize">


        <TextView
            android:id="@+id/txt_alertify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/noto_serif_bold"
            android:text="@string/alertify"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txt_alertify"
            android:layout_marginTop="55dp"
            android:background="@drawable/login_signup_shape"
            android:backgroundTint="@color/white"
            android:paddingBottom="20dp">


            <ImageView
                android:id="@+id/name_icon"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="51dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@+id/name_icon"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/nameEditBtn"
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:layout_below="@+id/name"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/pencil" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/nameEditBtn"
                android:layout_toEndOf="@+id/name_icon"
                android:hint="loading name...."
                android:textColor="@color/hint_color"
                android:textSize="15sp" />

            <View
                android:id="@+id/name_underline"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/userName"
                android:layout_marginTop="20dp"
                android:background="#B1B1B1" />

            <ImageView
                android:id="@+id/cnic_icon"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_below="@+id/name_underline"
                android:layout_marginStart="20dp"
                android:layout_marginTop="21dp"
                android:src="@drawable/cnic" />

            <TextView
                android:id="@+id/cnic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_underline"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/cnic_icon"
                android:text="@string/cnic_no"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/userCnic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cnic"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/cnic_icon"
                android:hint="loading cnic no...."
                android:textColor="@color/hint_color"
                android:textSize="15sp" />

            <View
                android:id="@+id/cnic_underline"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/userCnic"
                android:layout_marginTop="20dp"
                android:background="#B1B1B1" />


            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_below="@+id/cnic_underline"
                android:layout_marginStart="20dp"
                android:layout_marginTop="21dp"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cnic_underline"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/phone_icon"
                android:text="@string/phone_no"
                android:textColor="@color/black"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/userPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:layout_toEndOf="@+id/phone_icon"
                android:hint="loading phone no...."
                android:textColor="@color/hint_color"
                android:textSize="15sp" />

            <View
                android:id="@+id/phone_underline"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/userPhone"
                android:layout_marginTop="20dp"
                android:background="#B1B1B1" />

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_below="@+id/phone_underline"
                android:layout_marginStart="20dp"
                android:layout_marginTop="21dp"
                android:src="@drawable/mail" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_underline"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/email_icon"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginStart="19dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:layout_toEndOf="@+id/email_icon"
                android:hint="@string/loading_email"
                android:textColor="@color/hint_color"
                android:textSize="15sp" />

            <View
                android:id="@+id/email_underline"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/userEmail"
                android:layout_marginTop="20dp"
                android:background="#B1B1B1" />


            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_below="@+id/email_underline"
                android:layout_marginStart="20dp"
                android:layout_marginTop="21dp"
                android:src="@drawable/key" />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_underline"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/password_icon"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/passwordEditBtn"
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:layout_below="@+id/password"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/pencil" />

            <TextView
                android:id="@+id/change_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/passwordEditBtn"
                android:layout_toEndOf="@+id/password_icon"
                android:text="change password"
                android:textColor="@color/hint_color"
                android:textSize="15sp" />

        </RelativeLayout>


    </RelativeLayout>

</ScrollView>