<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">


        <TextView
            android:id="@+id/txt_alertify_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="User Login"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/txt_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_alertify_user"
            android:layout_marginStart="20dp"
            android:text="Please enter your details."
            android:textColor="@color/hint_color"
            android:textSize="12sp" />



        <!--        start of email field-->

        <TextView
            android:id="@+id/email_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_detail"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@+id/email_heading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email_hint"
            android:textColorHint="@color/hint_color"
            app:boxBackgroundColor="#DCDCDC"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/hint_color"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor_shape"
                android:textSize="13sp"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <!--        end of email field-->

        <!--        start of password field-->

        <TextView
            android:id="@+id/password_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/password_heading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password_hint"
            android:textColorHint="@color/hint_color"
            app:boxBackgroundColor="#DCDCDC"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:cornerRadius="25dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/hint_color"
            app:hintTextColor="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor_shape"
                android:textSize="13sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        end of password field-->

        <!--        start of login button-->

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/password_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/app_color"
            android:textAllCaps="false"
            android:text="@string/login"
            app:cornerRadius="25dp"
            android:textColor="@color/white"
            />

        <!--        end of login button-->

    </RelativeLayout>
</ScrollView>